@@ -52,7 +52,7 @@ export(
   "dumpdata", "thermo.axis", "solubility", "NaCl",
 # added 20190213 or later
   "CHNOSZ", "thermo", "reset", "OBIGT", "retrieve", "moles",
-  "lNaCl", "lS", "lT", "lP", "lTP", "lex",
+  "lNaCl", "lS", "lT", "lP", "lTP",
 # added 20200716 or later
   "mash", "mix", "rebalance",
 # added 20220324
