@@ -11,5 +11,3 @@ lT <- function(x, digits = 0) substitute(x~degree*C, list(x = round(x, digits)))
 lP <- function(x, digits = 0) if(identical(x, "Psat")) quote(italic(P)[sat]) else substitute(x~bar, list(x = round(x, digits)))
 
 lTP <- function(x, y, digits = 0) substitute(list(x, y), list(x = lT(x, digits), y = lP(y, digits)))
-
-lex <- function(...) as.expression(c(...))
